--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,14 +8,14 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "/blog_imki123/images/GitHub-Mark-120px-plus.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "120x120"
     },
     {
-      "src": "logo512.png",
+      "src": "/blog_imki123/images/GitHub-Mark-120px-plus.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "120x120"
     }
   ],
   "start_url": ".",
