Connect with backend using herokuapp

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "행복한 세상 블로그",
+  "name": "행복한 세상 블로그",
   "icons": [
     {
       "src": "favicon.ico",
