--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "7.2.1",
     "axios": "0.20.0",
     "gh-pages": "3.1.0",
+    "query-string": "6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "5.2.0",
