Guide: add avatar. fix style width

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "행복한 세상 블로그",
-  "name": "행복한 세상 블로그",
+  "short_name": "행복한 코딩 블로그",
+  "name": "행복한 코딩 블로그",
   "icons": [
     {
       "src": "favicon.ico",
