--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "7.2.1",
     "gh-pages": "3.1.0",
     "query-string": "6.13.1",
+    "quill": "1.3.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-quilljs": "1.2.11",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3"
   },
