--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "9.5.0",
     "@testing-library/user-event": "7.2.1",
     "gh-pages": "3.1.0",
+    "highlight.js": "10.2.0",
     "query-string": "6.13.1",
     "quill": "1.3.7",
     "react": "^16.13.1",
