--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blog_imki123",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://imki123.github.io/blog_imki123/",
+  "homepage": "https://imki123.github.io/",
   "dependencies": {
     "@material-ui/core": "4.11.0",
     "@material-ui/icons": "4.9.1",
