--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "quill": "1.3.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "6.1.0",
     "react-quilljs": "1.2.11",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3"
