--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-helmet": "6.1.0",
     "react-quilljs": "1.2.11",
     "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-snap": "1.23.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -26,7 +27,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "postbuild": "react-snap"
   },
   "eslintConfig": {
     "extends": "react-app"
