--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "postbuild": "react-snap && react-snap-sitemap --base-url=https://imki123.github.io/ --black-list=https://imki123.github.io/login,https://imki123.github.io/register"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
