--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gh-pages": "3.1.0",
     "query-string": "6.13.1",
     "quill": "1.3.7",
+    "quill-image-compress": "1.2.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "6.1.0",
