--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "행복한 코딩 블로그",
-  "name": "행복한 코딩 블로그",
+  "short_name": "임기의 코딩 블로그",
+  "name": "임기의 코딩 블로그",
   "icons": [
     {
       "src": "imcat_64.png",
