--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "quill-image-compress": "1.2.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-google-login": "5.1.21",
     "react-helmet": "6.1.0",
     "react-quilljs": "1.2.11",
     "react-router-dom": "5.2.0",
