--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.13.1",
     "react-google-login": "5.1.21",
     "react-helmet": "6.1.0",
+    "react-naver-login": "0.1.4",
     "react-quilljs": "1.2.11",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.3",
