--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "query-string": "6.13.1",
     "quill": "1.3.7",
     "quill-image-compress": "1.2.7",
-    "react": "^16.13.1",
+    "react": "16.13.1",
+    "react-copy-to-clipboard": "5.0.2",
     "react-dom": "^16.13.1",
     "react-google-login": "5.1.21",
     "react-helmet": "6.1.0",
