--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "postbuild": "react-snap && react-snap-sitemap --base-url=https://imki123.github.io/ --black-list=https://imki123.github.io/login,https://imki123.github.io/register,https://imki123.github.io/loginStatus,https://imki123.github.io/withdraw"
+    "postbuild": "react-snap && react-snap-sitemap --base-url=https://imki123.github.io/"
   },
   "eslintConfig": {
     "extends": "react-app"
