--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "7.2.1",
     "axios": "0.20.0",
     "gh-pages": "3.1.0",
+    "node-sass": "4.14.1",
     "query-string": "6.13.1",
     "quill": "1.3.7",
     "quill-image-compress": "1.2.7",
