--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "postbuild": "react-snap && react-snap-sitemap --base-url=https://imki123.github.io/",
+    "postbuild": "react-snap && react-snap-sitemap --base-url=https://imki123.github.io/ --change-frequency=always",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
