--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "0.20.0",
     "gh-pages": "3.1.0",
     "node-sass": "4.14.1",
+    "open-color": "1.7.0",
     "query-string": "6.13.1",
     "quill": "1.3.7",
     "quill-image-compress": "1.2.7",
