--- a/package.json
+++ b/package.json
@@ -3,33 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://imki123.github.io/",
-  "dependencies": {
-    "@fudohq/react-snap-sitemap": "0.1.5",
-    "@material-ui/core": "4.11.0",
-    "@material-ui/icons": "4.9.1",
-    "@testing-library/jest-dom": "4.2.4",
-    "@testing-library/react": "9.5.0",
-    "@testing-library/user-event": "7.2.1",
-    "axios": "0.20.0",
-    "gh-pages": "3.1.0",
-    "node-sass": "4.14.1",
-    "open-color": "1.7.0",
-    "query-string": "6.13.1",
-    "quill": "1.3.7",
-    "quill-image-compress": "1.2.7",
-    "react": "16.13.1",
-    "react-copy-to-clipboard": "5.0.2",
-    "react-dom": "^16.13.1",
-    "react-helmet": "6.1.0",
-    "react-naver-login": "0.1.4",
-    "react-quilljs": "1.2.11",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "3.4.3",
-    "react-snap": "1.23.0"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "predeploy": "npm run build && react-snap && react-snap-sitemap --base-url=https://imki123.github.io/ --change-frequency=always",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
@@ -49,5 +25,30 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "@fudohq/react-snap-sitemap": "0.1.5",
+    "@material-ui/core": "4.11.0",
+    "@material-ui/icons": "4.9.1",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "9.5.0",
+    "@testing-library/user-event": "7.2.1",
+    "axios": "0.20.0",
+    "gh-pages": "3.1.0",
+    "open-color": "1.7.0",
+    "query-string": "6.13.1",
+    "quill": "1.3.7",
+    "quill-image-compress": "1.2.7",
+    "react": "16.13.1",
+    "react-copy-to-clipboard": "5.0.2",
+    "react-dom": "^16.13.1",
+    "react-helmet": "6.1.0",
+    "react-quilljs": "1.2.11",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "3.4.3",
+    "react-snap": "1.23.0"
+  },
+  "devDependencies": {
+    "sass": "^1.56.1"
   }
 }
