--- a/manifest.json
+++ b/manifest.json
@@ -3,19 +3,9 @@
   "name": "임기의 코딩 블로그",
   "icons": [
     {
-      "src": "imcat_64.png",
+      "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
-    },
-    {
-      "src": "imcat_120.png",
-      "type": "image/png",
-      "sizes": "120x120"
-    },
-    {
-      "src": "imcat_120.png",
-      "type": "image/png",
-      "sizes": "120x120"
     }
   ],
   "start_url": ".",
